# docflow

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  CLOUD-SETUP-GUIDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
app/: db.py  main.py
app/agents/: captioner.py  chunker.py  classifier.py  embedder.py  graph.py  indexer.py  ocr.py  text_cleaner.py
app/api/: deps.py
app/api/routes/: auth.py  chats.py  query.py  upload.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/search/: hybrid.py
app/storage/: qdrant.py  s3.py
app/workers/: tasks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
infra/: Dockerfile  docker-compose.aws.yml  docker-compose.yml  nginx.conf
scripts/: seed_index.py
tests/: conftest.py  test_agents.py  test_api.py  test_hybrid_search.py
